--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <header class="header nav-open">
 
-    <p><a href="#"><img src="assets//images/logo.svg" alt="logo company"></a></p>
+    <p><a href="#"><img src="assets/images/logo.svg" alt="logo company"></a></p>
 
     <nav class="nav">
       <ul class="">
