--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div class="overlay">
   </div>
 
-  <header class="header nav-open">
+  <header class="header ">
 
     <p><a href="#"><img src="assets/images/logo.svg" alt="logo company"></a></p>
 
